ShapeDetection: Remove Shape Detection Register in utility

Shape Detection runs on gpu process, so the Register in utility isn't necessary.

BUG=646035

Change-Id: I3633650f2173ff566ce474f3b35e48658e99f785
Reviewed-on: https://chromium-review.googlesource.com/1170439
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582592}
Former-commit-id: 05768b7f5a7fafb8080743522756815da2d9ceff